<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4B0082"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/hs_iv_image"
        android:layout_width="227dp"
        android:layout_height="201dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icon_one" />

    <Button
        android:id="@+id/hs_bt_calc"
        style="@style/CustomButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/hs_calculate"
        app:layout_constraintBottom_toTopOf="@+id/hs_iv_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    <TextView
        android:id="@+id/hs_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:textColor="#32CD32"
        android:textSize="36sp"
        android:text="@string/hs_title"
        app:layout_constraintBottom_toTopOf="@+id/hs_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/hs_spinner"
        android:layout_width="245dp"
        android:layout_height="46dp"
        android:layout_marginBottom="32dp"
        android:entries="@array/hs_group"
        app:layout_constraintBottom_toTopOf="@+id/hs_num_nights"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/hs_num_nights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:hint="@string/hs_number_nights"
        android:inputType="number"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/hs_bt_calc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.316"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hs_date_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/hs_bt_calc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>